--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </style>
 </head>
 <body>
-    <h1>Hello, Welcome to My Website!</h1>
+    <h1>Hello, Welcome to Animal Rescue!</h1>
 
     <div class="blog-post">
         <h2>How to Start an Animal Rescue </h2>
